--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~11.2.6",
     "@angular/router": "~11.2.6",
     "@kolkov/ngx-gallery": "^1.2.3",
+    "@microsoft/signalr": "^5.0.4",
     "@schematics/angular": "^9.1.0",
     "bootstrap": "4.1.1",
     "bootswatch": "^4.6.0",
@@ -28,8 +29,10 @@
     "ng2-file-upload": "^1.4.0",
     "ngx-bootstrap": "^6.2.0",
     "ngx-spinner": "0.0.2",
+    "ngx-timeago": "^2.0.0",
     "ngx-toastr": "^13.2.1",
     "rxjs": "~6.6.0",
+    "time-ago-pipe": "^1.3.2",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
